fixed scrollbar issue

--- a/style.css
+++ b/style.css
@@ -31,3 +31,7 @@ h2{
 .circle {
     border-radius: 50%;
 }
+
+* {
+    --bs-gutter-x: 0 !important;
+  }
